--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
         "niklasravnsborg/laravel-pdf": "^4.0",
+        "smalot/pdfparser": "^2.2",
         "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
